test/libhyperion/syntaxTests/receiveQuanta/pure_modifier.hyp
contract C {
    uint x;
    receive() external pure { x = 2; }
}
// ----
// DeclarationError 7793: (29-63): Receive quanta function must be payable, but is "pure".
